@@ -7,6 +7,7 @@
     * Added test and prerequisite version for a Rose::DB bug that
       prevented certain reserved words from being detected as primary
       key columns in Postgres.  (Reported by Fred Cox)
+    * Baseline Oracle support added to the Loader.  (Patch by Teodor Zlatanov)
     * Fixed a bug that caused values not to be checked against the list
       of valid values in SET columns.  (Reported by Adrian Howard)
     * Fixed a bug that caused column (get/)set methods not to return the
